# TiPI

./: LICENSE  README.md
Auditor/: .gitignore
Auditor/auditord/: Makefile  auditor_config.yaml  go.mod  go.sum
Auditor/auditord/cmd/: main.go
Auditor/auditord/internal/api/: router.go
Auditor/auditord/internal/config/: config.go
Auditor/auditord/internal/metrics/: metrics.go
Auditor/auditord/internal/models/: models.go
Auditor/auditord/internal/service/: event_service.go
Auditor/auditord/internal/storage/: postgres_storage.go
Auditor/deploy/: auditor.Dockerfile  auditor.sh  auditor_base.Dockerfile  docker-compose.yml  entrypoint.sh  etcd.Dockerfile  patroni.Dockerfile  patroni_post_init.sh
Auditor/deploy/configs/: HAProxy.cfg  patroni.yml
Auditor/deploy/configs/pgconf/: postgresql.conf
Auditor/deploy/migrations/: init.sql
Auditor/docs/: API_Specification.md
Auditor/generator/: Makefile  go.mod  json_generator.py  main.go  main.py  requirements.txt  schema.json  sender.py
BLinkTree/: .gitignore
BLinkTree/src/: CMakeLists.txt  a.dot  dotgen.cpp  node.c  node.h  nodeIO.cpp  nodeIO.h  servicefilestructure.txt  tests.cpp  tree.c  tree.cpp  tree.h  value.h
DB/: .gitignore  go.mod  go.sum  run_tests.sh
DB/cmd/: main.go
DB/cmd/server/: main.go
DB/docker-test/: Dockerfile  Dockerfile2  HOWTO.md  docker-compose.yml
DB/internal/kvstorage/: kvs.go  kvs_api.go
DB/internal/logger/: logger.go
DB/internal/raft/: middleware.go  raftapi.go
DB/internal/rest/: api.go
DB/service/: reload_after_s.sh  server.service  setup.sh
DB/tools/: functional_test.sh  port_drop.sh  port_heal.sh  setup.sh
DistributedIntegral/: CMakeLists.txt  Makefile
DistributedIntegral/app/client/: CMakeLists.txt  main.c  main.cpp
DistributedIntegral/app/server/: CMakeLists.txt  main.c  main.cpp
DistributedIntegral/src/: CMakeLists.txt  common.h  log.c  utils.c
Ext2/: .gitignore  CMakeLists.txt  fill_fs.sh  install_fs.sh
Ext2/src/: CMakeLists.txt  main.cpp  reader.cpp  reader.hpp
LockFreeStack/: CMakeLists.txt
LockFreeStack/src/: CMakeLists.txt  lock_free_stack.hpp  tests.cpp
MatrixMultiplier/: .gitignore  Makefile  datahandler.py
MatrixMultiplier/src/: main.cpp  matrix.hpp
MatrixMultiplier/src/MultiplierVersions/: V1.cpp  V2.cpp  V3.cpp  V4.cpp
SpinLock/: .gitignore  CMakeLists.txt  CmakeLists.txt  process_data.py
SpinLock/src/: CMakeLists.txt  MCSLock.hpp  TASLock.hpp  TTASLock.hpp  TicketLock.hpp  main.cpp  tests.cpp
ThreadPool/: CMakeLists.txt
ThreadPool/src/: CMakeLists.txt  data_samples.cpp  data_samples.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp  thread_pool_tests.cpp
WindowsSSHServer/MessageFile/: MessageFile.vcxitems  message.aps  resource.rc
WindowsSSHServer/Pipe/: Pipe.vcxproj  main.cpp
WindowsSSHServer/Pipe/x64/Debug/: Pipe.exe.recipe  Pipe.ilk  vc145.idb
WindowsSSHServer/PipeChild/: PipeChild.vcxproj
WindowsSSHServer/PipeChild/x64/Debug/: PipeChild.exe.recipe  PipeChild.ilk  vc145.idb
WindowsSSHServer/SSHClient/: SSHClient.vcxproj  main.cpp
WindowsSSHServer/SSHClient/x64/Debug/: vc145.idb  (+2 more)
WindowsSSHServer/SSHServer/: SSHServer.slnx  SSHServer.vcxproj  SSHServer.vcxproj.filters  executer.cpp  executor.h  main.cpp
WindowsSSHServer/SSHServerServiceConfiguration/: SSHServerServiceConfiguration.vcxproj
WindowsSSHServer/SSHServerServiceControl/: SSHServerServiceControl.vcxproj
WindowsSSHServer/logger/: Source.cpp  logger.h  logger.vcxproj  logger.vcxproj.filters
cp/: CMakeLists.txt
cp/src/: CMakeLists.txt  main.c
lsof/: .gitignore  CMakeLists.txt
lsof/src/: CMakeLists.txt  main.cpp
(+50 files in other folders)
